--- a/Gestion_menbres/templates/includes/diacre/nav.html
+++ b/Gestion_menbres/templates/includes/diacre/nav.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="py-1">
-      <a href="{% url 'logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Déconnexion</a>
+      <a href="{% url 'gestMenb:logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Déconnexion</a>
     </div>
 </div>
 
