--- a/Gestion_menbres/templates/includes/asise.html
+++ b/Gestion_menbres/templates/includes/asise.html
@@ -27,6 +27,13 @@ background-repeat: no-repeat;
             ><span class="Atta text-lg">Page d'acceuil</span>
           </a>
         </li>
+           <li class="relative m-2">
+          <a href="{% url 'gestMenb:culte_consultation_pasteur' %}" class="text-white  hover:bg-gray-500 rounded-lg text-black    flex w-full space-x-2  px-10 py-4 font-semibold focus:outline-none">
+            <span
+              ><i class="fa-solid fa-church fa-xl icon  text-white icon-lg icon-shape"></i></span
+            ><span class="Atta text-lg">Cultes</span>
+          </a>
+        </li>
         <li class="relative m-2">
           <a href="{% url 'gestMenb:Menbres_view' %}" class="hover:bg-gray-500 text-white rounded-lg flex w-full space-x-2  px-10 py-4 font-semibold focus:outline-none">
             <span
