--- a/Gestion_menbres/templates/includes/diacre/asise.html
+++ b/Gestion_menbres/templates/includes/diacre/asise.html
@@ -28,11 +28,11 @@ background-repeat: no-repeat;
           </a>
         </li>
            <li class="relative m-2">
-          <button class="text-white hover:bg-gray-500 rounded-lg flex w-full space-x-2  px-10 py-4 font-semibold focus:outline-none">
+          <a href=" {% url 'gestMenb:culte' %}" class="text-white hover:bg-gray-500 rounded-lg flex w-full space-x-2  px-10 py-4 font-semibold focus:outline-none">
             <span
               ><i class="fa-solid fa-church fa-xl icon  text-white icon-lg icon-shape"></i></span
             ><span class="Atta text-lg">Cultes</span>
-          </button>
+          </a>
 
         </li>
         <li class="relative m-2">
