--- a/Gestion_menbres/templates/pasteur/membres_detail.html
+++ b/Gestion_menbres/templates/pasteur/membres_detail.html
@@ -28,7 +28,7 @@ Detail
                          {% endif %}
 
                         <h1 class="text-md font-bold">{{ menbre.nom }} {{ menbre.postnom }} {{ menbre.prenom }}</h1>
-                        <p class="text-gray-700">{{ menbre.fonction.nom }}</p>
+                        <p class="text-cyan-500 font-bold">{{ menbre.fonction.nom }}</p>
 
                     </div>
 
