--- a/Gestion_menbres/templates/diacre/fonctions.html
+++ b/Gestion_menbres/templates/diacre/fonctions.html
@@ -128,11 +128,13 @@ Membres
                 </td>
 
                 <td class="px-6 py-4">
+                    {% if fonction.nom != "Administrateur" and fonction.nom != "Diacre" and fonction.nom != "Prédicateur" %}
                       <a href="{% url 'gestMenb:Modifier_Fonction' cle=fonction.id %}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline"><i class="fa-solid  fa-xl fa-pen-to-square" style="color: #0fd4f5;"></i></a>
                     <a href="{% url 'gestMenb:Supprimer_Fonction' cle=fonction.id %}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">
 <i class="fa-solid  fa-xl fa-trash text-red-500" ></i>
-</a>
 
+</a>
+                    {% endif %}
                 </td>
 
 
