--- a/Gestion_menbres/templates/includes/diacre/nav.html
+++ b/Gestion_menbres/templates/includes/diacre/nav.html
@@ -1,8 +1,11 @@
 {% load static %}
 <header class="relative flex flex-col  items-center bg-slate-200 px-4 py-4 shadow sm:flex-row md:h-16">
-  <h1 class="w-full text-2xl font-black flex justify-center items-center text-gray-800 md:flex md:justify-start font-serif" >Atta El-Roï Tabernacle</h1>
-      <div class="flex w-full flex-col justify-end overflow-hidden transition-all sm:max-h-full sm:flex-row sm:items-center">
-        <!--<div class="relative ml-10 flex items-center justify-between rounded-md sm:ml-auto">
+  <h1
+    class="w-full text-2xl font-black flex  justify-center items-center text-gray-800 md:flex md:justify-start font-serif">
+    Atta El-Roï Tabernacle</h1>
+  <div
+    class="flex w-full flex-col justify-end overflow-hidden transition-all sm:max-h-full sm:flex-row sm:items-center">
+    <!--<div class="relative ml-10 flex items-center justify-between rounded-md sm:ml-auto">
 
           <svg class="absolute left-2 block h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <circle cx="11" cy="11" r="8" class=""></circle>
@@ -11,37 +14,40 @@
           <input type="name" name="search" class="h-12 w-full rounded-md border border-gray-100 bg-gray-100 py-4 pr-4 pl-12 shadow-sm outline-none focus:border-blue-500" placeholder="Search for anything" />
         </div>-->
 
-        <ul class="mx-auto mt-4 flex space-x-6 sm:mx-5 sm:mt-0">
+    <ul class="mx-auto mt-4 flex space-x-6 sm:mx-5 sm:mt-0">
 
-          <li>
+      <li>
 
-<img id="avatarButton" type="button" data-dropdown-toggle="userDropdown" data-dropdown-placement="bottom-start" class="w-10 h-10 rounded-full cursor-pointer" src="{% static 'img/online.png' %}" alt="User dropdown">
+        <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown" data-dropdown-placement="bottom-start"
+          class="w-10 h-10 rounded-full cursor-pointer" src="{% static 'img/online.png' %}" alt="User dropdown">
 
-<!-- Dropdown menu -->
-<div id="userDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-    <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
-         {% if user.is_authenticated %}
+        <!-- Dropdown menu -->
+        <div id="userDropdown"
+          class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+          <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+            {% if user.is_authenticated %}
 
-          <div>{{ user.username }} {{ user.last_name }}</div>
-         <!--<div class="font-medium truncate">{{ user.email }}</div>-->
+            <div>{{ user.username }} {{ user.last_name }}</div>
+            <!--<div class="font-medium truncate">{{ user.email }}</div>-->
 
             {% endif %}
 
 
-    </div>
+          </div>
 
-    <div class="py-1">
-      <a href="{% url 'logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Déconnexion</a>
-    </div>
-</div>
+          <div class="py-1">
+            <a href="{% url 'gestMenb:logout' %}"
+              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Déconnexion</a>
+          </div>
+        </div>
 
-          </li>
-
-
-
+      </li>
 
 
 
-        </ul>
-      </div>
-    </header>
+
+
+
+    </ul>
+  </div>
+</header>
