--- a/Gestion_menbres/templates/pasteur/menbres.html
+++ b/Gestion_menbres/templates/pasteur/menbres.html
@@ -90,9 +90,15 @@ Membres
                         {% endif %}
                     </div>
                 </td>
-                <td class="px-6 py-4">
-                    <a href="{% url 'gestMenb:Detail_membre' cle=membre.id %}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">voir plus</a>
-                </td>
+
+
+                 <td class="px-6 py-4">
+                                <a href="{% url 'gestMenb:Detail_membre' cle=membre.id %}"
+                            class="select h-10 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            <p>Détail</p>
+                        </a>
+
+                            </td>
             </tr>
         {% endfor %}
         </tbody>
